# System_Intragation

./: .gitignore  README.md
00._Assignments/01a._Data_Parsing_Servers/: app.py  pyParser(er00Opgaven).py  pyParser.py
00._Assignments/01a_Data_Parsing_Servers/: pyproject.toml
00._Assignments/03a._Data_Parsing_Servers/02._python/: main.py  pyproject.toml
00._Assignments/08a._WebRTC/: index.html  package-lock.json
00._Assignments/08b._DLS_Code_Documentation/: readme.md
00._Assignments/10a._Document_A_Database/: docker-compose.yaml  mydatabase_mro_docs.html
00._Assignments/10b._Migrate_One_Database/: docker-compose.yaml  migrate.js  package-lock.json  package.json
00._Assignments/11a._Auth_ Integration/: app.js  serviceAccountKey.json
00._Assignments/11a._Auth_Integration/: README.md  app.js  package-lock.json
00._Assignments/11b._Integrate_With_Payment/: package.json
00._Assignments/12a._Expose_&_Integrate_Webhook_System/: README.md
00._Assignments/Mandatory2/: readme.md
00._Assignments/Mandatoy1/: README.md
00_Assignments/01a_Data_Parsing_Servers/: app.py  jsParser.js  pyParser.py
02._Text-based_Data_Text/: me.csv  me.xml  me.yaml
02_Text-based_Data_Text/: me.json  me.txt
03._Modules/htmlclassic/: myModule.js
03._Modules/node_esmodules/: myModule.js
03._Modules/python_main/: library_importer.py
03_Modules/htmlclassic/: index.html
05._Python_Virtual_Environments/03._poetry/: pyproject.toml
06._Simple_Servers/02._python/: main.py  pyproject.toml
17._Database_Migrations/: mydatabase_mro_docs.html
18._CORS/: index.html
19._Multipart_Forms/: index.html
20._Base64_Images/: index.html
21._Audio/: index.html
22._MPEG-DASH/: app.js
23._Embedded_Youtube/: embeddedyoutube.html
27._Web_Scraping_Web_Crawling/04._python_scrapy_basic/: pyproject.toml
27._Web_Scraping_Web_Crawling/04._python_scrapy_basic/wikicrawler/wikicrawler/spiders/: WikiPageSpider.py
(+328 files in other folders)
