[project]
name = "03-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "UlrikLn",email = "ulrik9000@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "03"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
